added endpoint for getting product details for user
