# code/orders-domain/src/main/java/com/academy/orders/domain/product/usecase/GetProductDetailsByIdUseCase.java
@@ -1,0 +1,9 @@
+package com.academy.orders.domain.product.usecase;
+
+import com.academy.orders.domain.product.entity.Product;
+
+import java.util.UUID;
+
+public interface GetProductDetailsByIdUseCase {
+	Product getProductDetailsById(UUID productId, String lang);
+}
